<resources>
  <!--All-->
  <string name="app_name">LocationNews</string>
  <string name="all_auth_title">Authorization</string>
  <string name="all_permissions_not_granted_description">You have to take permissions to use all the features of the application</string>
  <string name="all_or">Or</string>
  <string name="all_button_apply">Apply</string>
  <string name="all_button_cancel">Cancel</string>
  <string name="all_all_news">All</string>
  <string-array name="all_start_categories">
    <item>business</item>
    <item>science</item>
    <item>sports</item>
  </string-array>

  <!--Tutorial-->
  <string name="tutorial_auth_description">Log in to save your settings</string>
  <string name="tutorial_location_title">Location</string>
  <string name="tutorial_news_title">Description</string>
  <string name="tutorial_location_description">Change the location to view the news wherever you want</string>
  <string name="tutorial_news_description">View the detailed description of the news</string>
  <string name="tutorial_next_button">Next</string>
  <string name="tutorial_skip_button">Skip</string>
  <string name="tutorial_start_button">Got it</string>

  <!--Auth-->
  <string name="auth_email_hint">E-mail</string>
  <string name="auth_password_hint">Password</string>
  <string name="auth_login_button">Log In</string>
  <string name="auth_register_button">Register</string>
  <string name="auth_registration_title">Registration</string>
  <string name="auth_forgot_pass_button">Forgot password?</string>
  <string name="auth_not_a_member_button">Not a member? Get registered now!</string>
  <string name="auth_reset_pass_button">Reset password</string>
  <string name="auth_reset_pass_instruction">We will send further instructions to your e-mail</string>
  <string name="auth_email_field_empty">Enter e-mail</string>
  <string name="auth_password_reset_confirm">Check your e-mail</string>
  <string name="auth_password_field_empty">Enter password</string>
  <string name="auth_password_less_than_6">Your password less than 6 symbols</string>

  <!--Newslist-->
  <string name="newslist_search_hint">Search</string>
  <string name="newslist_add_hint">Add category</string>
  <string name="newslist_location_hint">Location</string>
  <string name="newslist_category_add_hint">Choose the name of the topic you want to add</string>
  <string name="newslist_location_country_hint">You can select a country from the list</string>
  <string name="newslist_location_current">Use current location</string>
  <string name="newslist_logout_title">LogOut</string>
  <string name="newslist_manage_tabs_title">Manage tabs</string>
  <string name="newslist_refresh_hint">Refresh</string>
  <string name="newslist_manage_tabs_hint">Choose the tab you want to delete</string>
  <string name="newslist_add_category_warning">Sorry, there are no more categories you can add</string>
  <string name="newslist_location_connection_warning">Please check your internet connection</string>
  <string-array name="newslist_countries">
    <item>United Arab Emirates</item>
    <item>Argentina</item>
    <item>Austria</item>
    <item>Australia</item>
    <item>Belgium</item>
    <item>Bulgaria</item>
    <item>Brazil</item>
    <item>Canada</item>
    <item>Switzerland</item>
    <item>China</item>
    <item>Colombia</item>
    <item>Cuba</item>
    <item>Czech Republic</item>
    <item>Germany</item>
    <item>Egypt</item>
    <item>France</item>
    <item>United Kingdom</item>
    <item>Greece</item>
    <item>Hong Kong</item>
    <item>Hungary</item>
    <item>Indonesia</item>
    <item>Ireland</item>
    <item>Israel</item>
    <item>India</item>
    <item>Italy</item>
    <item>Japan</item>
    <item>Korea</item>
    <item>Republic of Lithuania</item>
    <item>Latvia</item>
    <item>Morocco</item>
    <item>Mexico</item>
    <item>Malaysia</item>
    <item>Nigeria</item>
    <item>Netherlands</item>
    <item>Norway</item>
    <item>New Zealand</item>
    <item>Philippines</item>
    <item>Poland</item>
    <item>Portugal</item>
    <item>Romania</item>
    <item>Serbia</item>
    <item>Russia</item>
    <item>Saudi Arabia</item>
    <item>Sweden</item>
    <item>Singapore</item>
    <item>Slovenia</item>
    <item>Slovakia</item>
    <item>Thailand</item>
    <item>Turkey</item>
    <item>Taiwan, Province of China</item>
    <item>Ukraine</item>
    <item>Venezuela</item>
    <item>South Africa</item>
  </string-array>
  <string-array name="newslist_countries_code">
    <item>ae</item>
    <item>ar</item>
    <item>at</item>
    <item>au</item>
    <item>be</item>
    <item>bg</item>
    <item>br</item>
    <item>ca</item>
    <item>ch</item>
    <item>cn</item>
    <item>co</item>
    <item>cu</item>
    <item>cz</item>
    <item>de</item>
    <item>eg</item>
    <item>fr</item>
    <item>gb</item>
    <item>gr</item>
    <item>hk</item>
    <item>hu</item>
    <item>id</item>
    <item>ie</item>
    <item>il</item>
    <item>in</item>
    <item>it</item>
    <item>jp</item>
    <item>kr</item>
    <item>lt</item>
    <item>lv</item>
    <item>ma</item>
    <item>mx</item>
    <item>my</item>
    <item>ng</item>
    <item>nl</item>
    <item>no</item>
    <item>nz</item>
    <item>ph</item>
    <item>pl</item>
    <item>pt</item>
    <item>ro</item>
    <item>rs</item>
    <item>ru</item>
    <item>sa</item>
    <item>se</item>
    <item>sg</item>
    <item>si</item>
    <item>sk</item>
    <item>th</item>
    <item>tr</item>
    <item>tw</item>
    <item>ua</item>
    <item>ve</item>
    <item>za</item>
  </string-array>
  <string-array name="newslist_categories">
    <item>business</item>
    <item>entertainment</item>
    <item>general</item>
    <item>health</item>
    <item>science</item>
    <item>sports</item>
    <item>technology</item>
  </string-array>

  <!--ERRORS-->
  <string name="error_user_not_found">Email not found</string>
  <string name="error_wrong_password">Wrong password</string>
  <string name="error_invalid_email">Invalid email</string>
  <string name="error_connection_lost">No internet connection</string>
  <string name="error_occurred">An error has occurred</string>
</resources>
