<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg"
    >

  <TextView
      android:id="@+id/textview_newslist_manage_title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/margin_newslist_dialog_16dp"
      android:gravity="center"
      android:text="@string/newslist_manage_tabs_title"
      android:textColor="@color/primary_text"
      android:textSize="18sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      />
  <TextView
      android:id="@+id/textview_newslist_manage_hint"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/margin_newslist_dialog_16dp"
      android:text="@string/newslist_manage_tabs_hint"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/textview_newslist_manage_title"
      />

  <Spinner
      android:id="@+id/spinner_newslist_manage"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/margin_newslist_dialog_16dp"
      android:background="@drawable/spinner_bg"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/textview_newslist_manage_hint"
      />

  <Button
      android:id="@+id/button_newslist_manage_apply"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginEnd="@dimen/margin_newslist_dialog_16dp"
      android:layout_marginStart="@dimen/margin_newslist_dialog_16dp"
      android:layout_marginTop="@dimen/margin_newslist_dialog_16dp"
      android:text="@string/all_button_apply"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/spinner_newslist_manage"
      style="@style/ApplyButton"
      />

  <Button
      android:id="@+id/button_newslist_manage_cancel"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/margin_newslist_dialog_16dp"
      android:layout_marginEnd="@dimen/margin_newslist_dialog_16dp"
      android:layout_marginStart="@dimen/margin_newslist_dialog_16dp"
      android:layout_marginTop="@dimen/margin_newslist_dialog_16dp"
      android:text="@string/all_button_cancel"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/button_newslist_manage_apply"
      style="@style/CancelButton"
      />

</android.support.constraint.ConstraintLayout>