<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

  <ImageView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="8dp"
      android:layout_marginEnd="@dimen/margin_auth_view_24dp"
      android:layout_marginStart="@dimen/margin_auth_view_24dp"
      android:background="@drawable/ic_registration"
      app:layout_constraintBottom_toTopOf="@id/edittext_registration_email"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      tools:ignore="ContentDescription"
      />

  <EditText
      android:id="@+id/edittext_registration_email"
      android:layout_width="0dp"
      android:layout_height="@dimen/height_auth_edittext"
      android:layout_marginBottom="@dimen/margin_auth_view_20dp"
      android:layout_marginEnd="@dimen/margin_auth_view_24dp"
      android:layout_marginStart="@dimen/margin_auth_view_24dp"
      android:hint="@string/auth_email_hint"
      android:inputType="textEmailAddress"
      android:selectAllOnFocus="false"
      android:singleLine="false"
      app:layout_constraintBottom_toTopOf="@id/edittext_registration_password"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="1.0"
      style="@style/EditTextAuth"
      />

  <EditText
      android:id="@+id/edittext_registration_password"
      android:layout_width="0dp"
      android:layout_height="@dimen/height_auth_edittext"
      android:layout_marginEnd="@dimen/margin_auth_view_24dp"
      android:layout_marginStart="@dimen/margin_auth_view_24dp"
      android:hint="@string/auth_password_hint"
      android:inputType="textPassword"
      android:selectAllOnFocus="false"
      android:singleLine="false"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      style="@style/EditTextAuth"
      />

  <Button
      android:id="@+id/button_registration_register"
      android:layout_width="0dp"
      android:layout_height="@dimen/height_auth_edittext"
      android:layout_marginEnd="@dimen/margin_auth_view_24dp"
      android:layout_marginStart="@dimen/margin_auth_view_24dp"
      android:layout_marginTop="@dimen/margin_auth_view_20dp"
      android:text="@string/auth_register_button"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/edittext_registration_password"
      style="@style/MainButtonAuth"
      />

  <ProgressBar
      android:id="@+id/progressbar_registration"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:visibility="invisible"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      />
</android.support.constraint.ConstraintLayout>